@@ -14,17 +14,26 @@
 package io.trino.sql;
 
 import com.google.common.base.Joiner;
-import com.google.common.base.Strings;
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
 import io.trino.sql.tree.AddColumn;
 import io.trino.sql.tree.AliasedRelation;
 import io.trino.sql.tree.AllColumns;
 import io.trino.sql.tree.Analyze;
+import io.trino.sql.tree.AssignmentStatement;
 import io.trino.sql.tree.AstVisitor;
 import io.trino.sql.tree.Call;
 import io.trino.sql.tree.CallArgument;
+import io.trino.sql.tree.CaseStatement;
+import io.trino.sql.tree.CaseStatementWhenClause;
 import io.trino.sql.tree.ColumnDefinition;
+import io.trino.sql.tree.ColumnPosition;
 import io.trino.sql.tree.Comment;
+import io.trino.sql.tree.CommentCharacteristic;
 import io.trino.sql.tree.Commit;
+import io.trino.sql.tree.CompoundStatement;
+import io.trino.sql.tree.ControlStatement;
+import io.trino.sql.tree.CreateCatalog;
+import io.trino.sql.tree.CreateFunction;
 import io.trino.sql.tree.CreateMaterializedView;
 import io.trino.sql.tree.CreateRole;
 import io.trino.sql.tree.CreateSchema;
@@ -33,16 +42,24 @@ import io.trino.sql.tree.CreateTableAsSelect;
 import io.trino.sql.tree.CreateView;
 import io.trino.sql.tree.Deallocate;
 import io.trino.sql.tree.Delete;
+import io.trino.sql.tree.Deny;
 import io.trino.sql.tree.DescribeInput;
 import io.trino.sql.tree.DescribeOutput;
+import io.trino.sql.tree.DeterministicCharacteristic;
+import io.trino.sql.tree.DropCatalog;
 import io.trino.sql.tree.DropColumn;
+import io.trino.sql.tree.DropFunction;
 import io.trino.sql.tree.DropMaterializedView;
+import io.trino.sql.tree.DropNotNullConstraint;
 import io.trino.sql.tree.DropRole;
 import io.trino.sql.tree.DropSchema;
 import io.trino.sql.tree.DropTable;
 import io.trino.sql.tree.DropView;
+import io.trino.sql.tree.ElseClause;
+import io.trino.sql.tree.ElseIfClause;
 import io.trino.sql.tree.Except;
 import io.trino.sql.tree.Execute;
+import io.trino.sql.tree.ExecuteImmediate;
 import io.trino.sql.tree.Explain;
 import io.trino.sql.tree.ExplainAnalyze;
 import io.trino.sql.tree.ExplainFormat;
@@ -50,35 +67,54 @@ import io.trino.sql.tree.ExplainOption;
 import io.trino.sql.tree.ExplainType;
 import io.trino.sql.tree.Expression;
 import io.trino.sql.tree.FetchFirst;
+import io.trino.sql.tree.FunctionSpecification;
 import io.trino.sql.tree.Grant;
+import io.trino.sql.tree.GrantObject;
 import io.trino.sql.tree.GrantRoles;
 import io.trino.sql.tree.GrantorSpecification;
 import io.trino.sql.tree.Identifier;
+import io.trino.sql.tree.IfStatement;
 import io.trino.sql.tree.Insert;
 import io.trino.sql.tree.Intersect;
 import io.trino.sql.tree.Isolation;
+import io.trino.sql.tree.IterateStatement;
 import io.trino.sql.tree.Join;
 import io.trino.sql.tree.JoinCriteria;
 import io.trino.sql.tree.JoinOn;
 import io.trino.sql.tree.JoinUsing;
+import io.trino.sql.tree.JsonTable;
+import io.trino.sql.tree.JsonTableColumnDefinition;
+import io.trino.sql.tree.JsonTableDefaultPlan;
+import io.trino.sql.tree.LanguageCharacteristic;
 import io.trino.sql.tree.Lateral;
+import io.trino.sql.tree.LeaveStatement;
 import io.trino.sql.tree.LikeClause;
 import io.trino.sql.tree.Limit;
+import io.trino.sql.tree.LoopStatement;
 import io.trino.sql.tree.Merge;
 import io.trino.sql.tree.MergeCase;
 import io.trino.sql.tree.MergeDelete;
 import io.trino.sql.tree.MergeInsert;
 import io.trino.sql.tree.MergeUpdate;
 import io.trino.sql.tree.NaturalJoin;
+import io.trino.sql.tree.NestedColumns;
 import io.trino.sql.tree.Node;
+import io.trino.sql.tree.NullInputCharacteristic;
 import io.trino.sql.tree.Offset;
 import io.trino.sql.tree.OrderBy;
+import io.trino.sql.tree.OrdinalityColumn;
+import io.trino.sql.tree.ParameterDeclaration;
 import io.trino.sql.tree.PatternRecognitionRelation;
+import io.trino.sql.tree.PlanLeaf;
+import io.trino.sql.tree.PlanParentChild;
+import io.trino.sql.tree.PlanSiblings;
 import io.trino.sql.tree.Prepare;
 import io.trino.sql.tree.PrincipalSpecification;
+import io.trino.sql.tree.PropertiesCharacteristic;
 import io.trino.sql.tree.Property;
 import io.trino.sql.tree.QualifiedName;
 import io.trino.sql.tree.Query;
+import io.trino.sql.tree.QueryColumn;
 import io.trino.sql.tree.QueryPeriod;
 import io.trino.sql.tree.QuerySpecification;
 import io.trino.sql.tree.RefreshMaterializedView;
@@ -88,20 +124,29 @@ import io.trino.sql.tree.RenameMaterializedView;
 import io.trino.sql.tree.RenameSchema;
 import io.trino.sql.tree.RenameTable;
 import io.trino.sql.tree.RenameView;
+import io.trino.sql.tree.RepeatStatement;
 import io.trino.sql.tree.ResetSession;
+import io.trino.sql.tree.ResetSessionAuthorization;
+import io.trino.sql.tree.ReturnStatement;
+import io.trino.sql.tree.ReturnsClause;
 import io.trino.sql.tree.Revoke;
 import io.trino.sql.tree.RevokeRoles;
 import io.trino.sql.tree.Rollback;
+import io.trino.sql.tree.RoutineCharacteristic;
 import io.trino.sql.tree.Row;
 import io.trino.sql.tree.RowPattern;
 import io.trino.sql.tree.SampledRelation;
+import io.trino.sql.tree.SecurityCharacteristic;
 import io.trino.sql.tree.Select;
 import io.trino.sql.tree.SelectItem;
+import io.trino.sql.tree.SessionProperty;
+import io.trino.sql.tree.SetColumnType;
 import io.trino.sql.tree.SetPath;
 import io.trino.sql.tree.SetProperties;
 import io.trino.sql.tree.SetRole;
 import io.trino.sql.tree.SetSchemaAuthorization;
 import io.trino.sql.tree.SetSession;
+import io.trino.sql.tree.SetSessionAuthorization;
 import io.trino.sql.tree.SetTableAuthorization;
 import io.trino.sql.tree.SetTimeZone;
 import io.trino.sql.tree.SetViewAuthorization;
@@ -118,8 +163,13 @@ import io.trino.sql.tree.ShowStats;
 import io.trino.sql.tree.ShowTables;
 import io.trino.sql.tree.SingleColumn;
 import io.trino.sql.tree.StartTransaction;
+import io.trino.sql.tree.StringLiteral;
 import io.trino.sql.tree.Table;
 import io.trino.sql.tree.TableExecute;
+import io.trino.sql.tree.TableFunctionArgument;
+import io.trino.sql.tree.TableFunctionDescriptorArgument;
+import io.trino.sql.tree.TableFunctionInvocation;
+import io.trino.sql.tree.TableFunctionTableArgument;
 import io.trino.sql.tree.TableSubquery;
 import io.trino.sql.tree.TransactionAccessMode;
 import io.trino.sql.tree.TransactionMode;
@@ -128,27 +178,31 @@ import io.trino.sql.tree.Union;
 import io.trino.sql.tree.Unnest;
 import io.trino.sql.tree.Update;
 import io.trino.sql.tree.UpdateAssignment;
+import io.trino.sql.tree.ValueColumn;
 import io.trino.sql.tree.Values;
+import io.trino.sql.tree.VariableDeclaration;
+import io.trino.sql.tree.WhileStatement;
 import io.trino.sql.tree.WithQuery;
 
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.Iterables.getOnlyElement;
-import static com.google.common.collect.Iterables.transform;
-import static io.trino.sql.ExpressionFormatter.formatExpression;
 import static io.trino.sql.ExpressionFormatter.formatGroupBy;
+import static io.trino.sql.ExpressionFormatter.formatJsonPathInvocation;
 import static io.trino.sql.ExpressionFormatter.formatOrderBy;
 import static io.trino.sql.ExpressionFormatter.formatSkipTo;
 import static io.trino.sql.ExpressionFormatter.formatStringLiteral;
 import static io.trino.sql.ExpressionFormatter.formatWindowSpecification;
 import static io.trino.sql.RowPatternFormatter.formatPattern;
-import static java.lang.String.format;
+import static io.trino.sql.tree.SaveMode.IGNORE;
+import static io.trino.sql.tree.SaveMode.REPLACE;
+import static java.lang.String.join;
+import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.joining;
 
 public final class SqlFormatter
@@ -164,21 +218,55 @@ public final class SqlFormatter
         return builder.toString();
     }
 
-    static String formatName(QualifiedName name)
+    private static String formatName(Identifier identifier)
+    {
+        return ExpressionFormatter.formatExpression(identifier);
+    }
+
+    public static String formatName(QualifiedName name)
     {
         return name.getOriginalParts().stream()
-                .map(ExpressionFormatter::formatExpression)
+                .map(SqlFormatter::formatName)
                 .collect(joining("."));
+    }
+
+    private static String formatExpression(Expression expression)
+    {
+        return ExpressionFormatter.formatExpression(expression);
     }
 
     private static class Formatter
             extends AstVisitor<Void, Integer>
     {
-        private final StringBuilder builder;
+        private static class SqlBuilder
+        {
+            private final StringBuilder builder;
+
+            public SqlBuilder(StringBuilder builder)
+            {
+                this.builder = requireNonNull(builder, "builder is null");
+            }
+
+            @CanIgnoreReturnValue
+            public SqlBuilder append(CharSequence value)
+            {
+                builder.append(value);
+                return this;
+            }
+
+            @CanIgnoreReturnValue
+            public SqlBuilder append(char c)
+            {
+                builder.append(c);
+                return this;
+            }
+        }
+
+        private final SqlBuilder builder;
 
         public Formatter(StringBuilder builder)
         {
-            this.builder = builder;
+            this.builder = new SqlBuilder(builder);
         }
 
         @Override
@@ -208,12 +296,167 @@ public final class SqlFormatter
         {
             builder.append("UNNEST(")
                     .append(node.getExpressions().stream()
-                            .map(ExpressionFormatter::formatExpression)
+                            .map(SqlFormatter::formatExpression)
                             .collect(joining(", ")))
                     .append(")");
             if (node.isWithOrdinality()) {
                 builder.append(" WITH ORDINALITY");
             }
+            return null;
+        }
+
+        @Override
+        protected Void visitJsonTable(JsonTable node, Integer indent)
+        {
+            builder.append("JSON_TABLE (")
+                    .append(formatJsonPathInvocation(node.getJsonPathInvocation()))
+                    .append("\n");
+            appendJsonTableColumns(node.getColumns(), indent + 1);
+            node.getPlan().ifPresent(plan -> {
+                builder.append("\n");
+                if (plan instanceof JsonTableDefaultPlan) {
+                    append(indent + 1, "PLAN DEFAULT (");
+                }
+                else {
+                    append(indent + 1, "PLAN (");
+                }
+                process(plan, indent + 1);
+                builder.append(")");
+            });
+            node.getErrorBehavior().ifPresent(behavior -> {
+                builder.append("\n");
+                append(indent + 1, behavior + " ON ERROR");
+            });
+            builder.append(")\n");
+            return null;
+        }
+
+        private void appendJsonTableColumns(List<JsonTableColumnDefinition> columns, int indent)
+        {
+            append(indent, "COLUMNS (\n");
+            for (int i = 0; i < columns.size() - 1; i++) {
+                process(columns.get(i), indent + 1);
+                builder.append(",\n");
+            }
+            process(columns.getLast(), indent + 1);
+            builder.append(")");
+        }
+
+        @Override
+        protected Void visitOrdinalityColumn(OrdinalityColumn node, Integer indent)
+        {
+            append(indent, formatName(node.getName()) + " FOR ORDINALITY");
+            return null;
+        }
+
+        @Override
+        protected Void visitValueColumn(ValueColumn node, Integer indent)
+        {
+            append(indent, formatName(node.getName()))
+                    .append(" ")
+                    .append(formatExpression(node.getType()));
+            node.getJsonPath().ifPresent(path ->
+                    builder.append(" PATH ")
+                            .append(formatExpression(path)));
+            builder.append(" ")
+                    .append(node.getEmptyBehavior().name())
+                    .append(node.getEmptyDefault().map(expression -> " " + formatExpression(expression)).orElse(""))
+                    .append(" ON EMPTY");
+            node.getErrorBehavior().ifPresent(behavior ->
+                    builder.append(" ")
+                            .append(behavior.name())
+                            .append(node.getErrorDefault().map(expression -> " " + formatExpression(expression)).orElse(""))
+                            .append(" ON ERROR"));
+            return null;
+        }
+
+        @Override
+        protected Void visitQueryColumn(QueryColumn node, Integer indent)
+        {
+            append(indent, formatName(node.getName()))
+                    .append(" ")
+                    .append(formatExpression(node.getType()))
+                    .append(" FORMAT ")
+                    .append(node.getFormat().toString());
+            node.getJsonPath().ifPresent(path ->
+                    builder.append(" PATH ")
+                            .append(formatExpression(path)));
+            builder.append(switch (node.getWrapperBehavior()) {
+                case WITHOUT -> " WITHOUT ARRAY WRAPPER";
+                case CONDITIONAL -> " WITH CONDITIONAL ARRAY WRAPPER";
+                case UNCONDITIONAL -> " WITH UNCONDITIONAL ARRAY WRAPPER";
+            });
+
+            if (node.getQuotesBehavior().isPresent()) {
+                builder.append(switch (node.getQuotesBehavior().get()) {
+                    case KEEP -> " KEEP QUOTES ON SCALAR STRING";
+                    case OMIT -> " OMIT QUOTES ON SCALAR STRING";
+                });
+            }
+            builder.append(" ")
+                    .append(node.getEmptyBehavior().toString())
+                    .append(" ON EMPTY");
+            node.getErrorBehavior().ifPresent(behavior ->
+                    builder.append(" ")
+                            .append(behavior.toString())
+                            .append(" ON ERROR"));
+            return null;
+        }
+
+        @Override
+        protected Void visitNestedColumns(NestedColumns node, Integer indent)
+        {
+            append(indent, "NESTED PATH ")
+                    .append(formatExpression(node.getJsonPath()));
+            node.getPathName().ifPresent(name ->
+                    builder.append(" AS ")
+                            .append(formatName(name)));
+            builder.append("\n");
+            appendJsonTableColumns(node.getColumns(), indent + 1);
+            return null;
+        }
+
+        @Override
+        protected Void visitJsonTableDefaultPlan(JsonTableDefaultPlan node, Integer indent)
+        {
+            builder.append(node.getParentChild().name())
+                    .append(", ")
+                    .append(node.getSiblings().name());
+            return null;
+        }
+
+        @Override
+        protected Void visitPlanParentChild(PlanParentChild node, Integer indent)
+        {
+            process(node.getParent());
+            builder.append(" ")
+                    .append(node.getType().name())
+                    .append(" (");
+            process(node.getChild());
+            builder.append(")");
+            return null;
+        }
+
+        @Override
+        protected Void visitPlanSiblings(PlanSiblings node, Integer context)
+        {
+            for (int i = 0; i < node.getSiblings().size() - 1; i++) {
+                builder.append("(");
+                process(node.getSiblings().get(i));
+                builder.append(") ")
+                        .append(node.getType().name())
+                        .append(" ");
+            }
+            builder.append("(");
+            process(node.getSiblings().getLast());
+            builder.append(")");
+            return null;
+        }
+
+        @Override
+        protected Void visitPlanLeaf(PlanLeaf node, Integer context)
+        {
+            builder.append(formatName(node.getName()));
             return null;
         }
 
@@ -227,10 +470,117 @@ public final class SqlFormatter
         }
 
         @Override
+        protected Void visitTableFunctionInvocation(TableFunctionInvocation node, Integer indent)
+        {
+            append(indent, "TABLE(");
+            appendTableFunctionInvocation(node, indent + 1);
+            builder.append(")");
+            return null;
+        }
+
+        private void appendTableFunctionInvocation(TableFunctionInvocation node, Integer indent)
+        {
+            builder.append(formatName(node.getName()))
+                    .append("(\n");
+            appendTableFunctionArguments(node.getArguments(), indent + 1);
+            if (!node.getCopartitioning().isEmpty()) {
+                builder.append("\n");
+                append(indent + 1, "COPARTITION ");
+                builder.append(node.getCopartitioning().stream()
+                        .map(tableList -> tableList.stream()
+                                .map(SqlFormatter::formatName)
+                                .collect(joining(", ", "(", ")")))
+                        .collect(joining(", ")));
+            }
+            builder.append(")");
+        }
+
+        private void appendTableFunctionArguments(List<TableFunctionArgument> arguments, int indent)
+        {
+            for (int i = 0; i < arguments.size(); i++) {
+                TableFunctionArgument argument = arguments.get(i);
+                if (argument.getName().isPresent()) {
+                    append(indent, formatName(argument.getName().get()));
+                    builder.append(" => ");
+                }
+                else {
+                    append(indent, "");
+                }
+                Node value = argument.getValue();
+                if (value instanceof Expression) {
+                    builder.append(formatExpression((Expression) value));
+                }
+                else {
+                    process(value, indent + 1);
+                }
+                if (i < arguments.size() - 1) {
+                    builder.append(",\n");
+                }
+            }
+        }
+
+        @Override
+        protected Void visitTableArgument(TableFunctionTableArgument node, Integer indent)
+        {
+            Relation relation = node.getTable();
+            Node unaliased = relation instanceof AliasedRelation ? ((AliasedRelation) relation).getRelation() : relation;
+            if (unaliased instanceof TableSubquery) {
+                // unpack the relation from TableSubquery to avoid adding another pair of parentheses
+                unaliased = ((TableSubquery) unaliased).getQuery();
+            }
+            builder.append("TABLE(");
+            process(unaliased, indent);
+            builder.append(")");
+            if (relation instanceof AliasedRelation aliasedRelation) {
+                builder.append(" AS ")
+                        .append(formatName(aliasedRelation.getAlias()));
+                appendAliasColumns(builder, aliasedRelation.getColumnNames());
+            }
+            if (node.getPartitionBy().isPresent()) {
+                builder.append("\n");
+                append(indent, "PARTITION BY ")
+                        .append(node.getPartitionBy().get().stream()
+                                .map(SqlFormatter::formatExpression)
+                                .collect(joining(", ")));
+            }
+            node.getEmptyTableTreatment().ifPresent(treatment -> {
+                builder.append("\n");
+                append(indent, treatment.getTreatment().name() + " WHEN EMPTY");
+            });
+            node.getOrderBy().ifPresent(orderBy -> {
+                builder.append("\n");
+                append(indent, formatOrderBy(orderBy));
+            });
+
+            return null;
+        }
+
+        @Override
+        protected Void visitDescriptorArgument(TableFunctionDescriptorArgument node, Integer indent)
+        {
+            if (node.getDescriptor().isPresent()) {
+                builder.append(node.getDescriptor().get().getFields().stream()
+                        .map(field -> {
+                            String formattedField = formatName(field.getName());
+                            if (field.getType().isPresent()) {
+                                formattedField = formattedField + " " + formatExpression(field.getType().get());
+                            }
+                            return formattedField;
+                        })
+                        .collect(joining(", ", "DESCRIPTOR(", ")")));
+            }
+            else {
+                builder.append("CAST (NULL AS DESCRIPTOR)");
+            }
+
+            return null;
+        }
+
+        @Override
         protected Void visitPrepare(Prepare node, Integer indent)
         {
             append(indent, "PREPARE ");
-            builder.append(node.getName());
+            builder.append(formatName(node.getName()));
             builder.append(" FROM");
             builder.append("\n");
             process(node.getStatement(), indent + 1);
@@ -241,7 +591,7 @@ public final class SqlFormatter
         protected Void visitDeallocate(Deallocate node, Integer indent)
         {
             append(indent, "DEALLOCATE PREPARE ");
-            builder.append(node.getName());
+            builder.append(formatName(node.getName()));
             return null;
         }
 
@@ -249,11 +599,28 @@ public final class SqlFormatter
         protected Void visitExecute(Execute node, Integer indent)
         {
             append(indent, "EXECUTE ");
-            builder.append(node.getName());
+            builder.append(formatName(node.getName()));
             List<Expression> parameters = node.getParameters();
             if (!parameters.isEmpty()) {
                 builder.append(" USING ");
-                Joiner.on(", ").appendTo(builder, parameters);
+                builder.append(parameters.stream()
+                        .map(SqlFormatter::formatExpression)
+                        .collect(joining(", ")));
+            }
+            return null;
+        }
+
+        @Override
+        protected Void visitExecuteImmediate(ExecuteImmediate node, Integer indent)
+        {
+            append(indent, "EXECUTE IMMEDIATE\n")
+                    .append(formatStringLiteral(node.getStatement().getValue()));
+            List<Expression> parameters = node.getParameters();
+            if (!parameters.isEmpty()) {
+                builder.append("\nUSING ");
+                builder.append(parameters.stream()
+                        .map(SqlFormatter::formatExpression)
+                        .collect(joining(", ")));
             }
             return null;
         }
@@ -262,7 +629,7 @@ public final class SqlFormatter
         protected Void visitDescribeOutput(DescribeOutput node, Integer indent)
         {
             append(indent, "DESCRIBE OUTPUT ");
-            builder.append(node.getName());
+            builder.append(formatName(node.getName()));
             return null;
         }
 
@@ -270,13 +637,36 @@ public final class SqlFormatter
         protected Void visitDescribeInput(DescribeInput node, Integer indent)
         {
             append(indent, "DESCRIBE INPUT ");
-            builder.append(node.getName());
+            builder.append(formatName(node.getName()));
             return null;
         }
 
         @Override
         protected Void visitQuery(Query node, Integer indent)
         {
+            if (!node.getSessionProperties().isEmpty()) {
+                builder.append("WITH SESSION\n");
+                Iterator<SessionProperty> sessionProperties = node.getSessionProperties().iterator();
+                while (sessionProperties.hasNext()) {
+                    process(sessionProperties.next(), indent + 1);
+                    if (sessionProperties.hasNext()) {
+                        builder.append(',');
+                    }
+                    builder.append('\n');
+                }
+            }
+            if (!node.getFunctions().isEmpty()) {
+                builder.append("WITH\n");
+                Iterator<FunctionSpecification> functions = node.getFunctions().iterator();
+                while (functions.hasNext()) {
+                    process(functions.next(), indent + 1);
+                    if (functions.hasNext()) {
+                        builder.append(',');
+                    }
+                    builder.append('\n');
+                }
+            }
+
             node.getWith().ifPresent(with -> {
                 append(indent, "WITH");
                 if (with.isRecursive()) {
@@ -286,7 +676,7 @@ public final class SqlFormatter
                 Iterator<WithQuery> queries = with.getQueries().iterator();
                 while (queries.hasNext()) {
                     WithQuery query = queries.next();
-                    append(indent, formatExpression(query.getName()));
+                    append(indent, formatName(query.getName()));
                     query.getColumnNames().ifPresent(columnNames -> appendAliasColumns(builder, columnNames));
                     builder.append(" AS ");
                     process(new TableSubquery(query.getQuery()), indent);
@@ -330,7 +720,7 @@ public final class SqlFormatter
             if (!node.getWindows().isEmpty()) {
                 append(indent, "WINDOW");
                 formatDefinitionList(node.getWindows().stream()
-                        .map(definition -> formatExpression(definition.getName()) + " AS " + formatWindowSpecification(definition.getWindow()))
+                        .map(definition -> formatName(definition.getName()) + " AS " + formatWindowSpecification(definition.getWindow()))
                         .collect(toImmutableList()), indent + 1);
             }
 
@@ -410,7 +800,7 @@ public final class SqlFormatter
             builder.append(formatExpression(node.getExpression()));
             node.getAlias().ifPresent(alias -> builder
                     .append(' ')
-                    .append(formatExpression(alias)));
+                    .append(formatName(alias)));
 
             return null;
         }
@@ -426,7 +816,7 @@ public final class SqlFormatter
             if (!node.getAliases().isEmpty()) {
                 builder.append(" AS (")
                         .append(Joiner.on(", ").join(node.getAliases().stream()
-                                .map(ExpressionFormatter::formatExpression)
+                                .map(SqlFormatter::formatName)
                                 .collect(toImmutableList())))
                         .append(")");
             }
@@ -475,14 +865,12 @@ public final class SqlFormatter
             process(node.getRight(), indent);
 
             if (node.getType() != Join.Type.CROSS && node.getType() != Join.Type.IMPLICIT) {
-                if (criteria instanceof JoinUsing) {
-                    JoinUsing using = (JoinUsing) criteria;
+                if (criteria instanceof JoinUsing using) {
                     builder.append(" USING (")
                             .append(Joiner.on(", ").join(using.getColumns()))
                             .append(")");
                 }
-                else if (criteria instanceof JoinOn) {
-                    JoinOn on = (JoinOn) criteria;
+                else if (criteria instanceof JoinOn on) {
                     builder.append(" ON ")
                             .append(formatExpression(on.getExpression()));
                 }
@@ -504,7 +892,7 @@ public final class SqlFormatter
             processRelationSuffix(node.getRelation(), indent);
 
             builder.append(' ')
-                    .append(formatExpression(node.getAlias()));
+                    .append(formatName(node.getAlias()));
             appendAliasColumns(builder, node.getColumnNames());
 
             return null;
@@ -519,7 +907,7 @@ public final class SqlFormatter
             if (!node.getPartitionBy().isEmpty()) {
                 append(indent + 1, "PARTITION BY ")
                         .append(node.getPartitionBy().stream()
-                                .map(ExpressionFormatter::formatExpression)
+                                .map(SqlFormatter::formatExpression)
                                 .collect(joining(", ")))
                         .append("\n");
             }
@@ -528,29 +916,19 @@ public final class SqlFormatter
             if (!node.getMeasures().isEmpty()) {
                 append(indent + 1, "MEASURES");
                 formatDefinitionList(node.getMeasures().stream()
-                        .map(measure -> formatExpression(measure.getExpression()) + " AS " + formatExpression(measure.getName()))
+                        .map(measure -> formatExpression(measure.getExpression()) + " AS " + formatName(measure.getName()))
                         .collect(toImmutableList()), indent + 2);
             }
 
             node.getRowsPerMatch().ifPresent(rowsPerMatch -> {
-                String rowsPerMatchDescription;
-                switch (rowsPerMatch) {
-                    case ONE:
-                        rowsPerMatchDescription = "ONE ROW PER MATCH";
-                        break;
-                    case ALL_SHOW_EMPTY:
-                        rowsPerMatchDescription = "ALL ROWS PER MATCH SHOW EMPTY MATCHES";
-                        break;
-                    case ALL_OMIT_EMPTY:
-                        rowsPerMatchDescription = "ALL ROWS PER MATCH OMIT EMPTY MATCHES";
-                        break;
-                    case ALL_WITH_UNMATCHED:
-                        rowsPerMatchDescription = "ALL ROWS PER MATCH WITH UNMATCHED ROWS";
-                        break;
-                    default:
-                        // RowsPerMatch of type WINDOW cannot occur in MATCH_RECOGNIZE clause
-                        throw new IllegalStateException("unexpected rowsPerMatch: " + node.getRowsPerMatch().get());
-                }
+                String rowsPerMatchDescription = switch (rowsPerMatch) {
+                    case ONE -> "ONE ROW PER MATCH";
+                    case ALL_SHOW_EMPTY -> "ALL ROWS PER MATCH SHOW EMPTY MATCHES";
+                    case ALL_OMIT_EMPTY -> "ALL ROWS PER MATCH OMIT EMPTY MATCHES";
+                    case ALL_WITH_UNMATCHED -> "ALL ROWS PER MATCH WITH UNMATCHED ROWS";
+                    default -> // RowsPerMatch of type WINDOW cannot occur in MATCH_RECOGNIZE clause
+                            throw new IllegalStateException("unexpected rowsPerMatch: " + node.getRowsPerMatch().get());
+                };
                 append(indent + 1, rowsPerMatchDescription)
                         .append("\n");
             });
@@ -563,7 +941,7 @@ public final class SqlFormatter
 
             node.getPatternSearchMode().ifPresent(patternSearchMode ->
                     append(indent + 1, patternSearchMode.getMode().name())
-                    .append("\n"));
+                            .append("\n"));
 
             append(indent + 1, "PATTERN (")
                     .append(formatPattern(node.getPattern()))
@@ -571,13 +949,13 @@ public final class SqlFormatter
             if (!node.getSubsets().isEmpty()) {
                 append(indent + 1, "SUBSET");
                 formatDefinitionList(node.getSubsets().stream()
-                        .map(subset -> formatExpression(subset.getName()) + " = " + subset.getIdentifiers().stream()
-                                .map(ExpressionFormatter::formatExpression).collect(joining(", ", "(", ")")))
+                        .map(subset -> formatName(subset.getName()) + " = " + subset.getIdentifiers().stream()
+                                .map(SqlFormatter::formatName).collect(joining(", ", "(", ")")))
                         .collect(toImmutableList()), indent + 2);
             }
             append(indent + 1, "DEFINE");
             formatDefinitionList(node.getVariableDefinitions().stream()
-                    .map(variable -> formatExpression(variable.getName()) + " AS " + formatExpression(variable.getExpression()))
+                    .map(variable -> formatName(variable.getName()) + " AS " + formatExpression(variable.getExpression()))
                     .collect(toImmutableList()), indent + 2);
 
             builder.append(")");
@@ -591,9 +969,9 @@ public final class SqlFormatter
             processRelationSuffix(node.getRelation(), indent);
 
             builder.append(" TABLESAMPLE ")
-                    .append(node.getType())
+                    .append(node.getType().name())
                     .append(" (")
-                    .append(node.getSamplePercentage())
+                    .append(formatExpression(node.getSamplePercentage()))
                     .append(')');
 
             return null;
@@ -700,20 +1078,20 @@ public final class SqlFormatter
         protected Void visitMerge(Merge node, Integer indent)
         {
             builder.append("MERGE INTO ")
-                    .append(node.getTable().getName());
+                    .append(formatName(node.getTargetTable().getName()));
 
             node.getTargetAlias().ifPresent(value -> builder
                     .append(' ')
-                    .append(value));
+                    .append(formatName(value)));
             builder.append("\n");
 
             append(indent + 1, "USING ");
 
-            processRelation(node.getRelation(), indent + 2);
+            processRelation(node.getSource(), indent + 2);
 
             builder.append("\n");
             append(indent + 1, "ON ");
-            builder.append(formatExpression(node.getExpression()));
+            builder.append(formatExpression(node.getPredicate()));
 
             for (MergeCase mergeCase : node.getMergeCases()) {
                 builder.append("\n");
@@ -730,14 +1108,15 @@ public final class SqlFormatter
             append(indent + 1, "THEN INSERT ");
 
             if (!node.getColumns().isEmpty()) {
-                builder.append("(");
-                Joiner.on(", ").appendTo(builder, node.getColumns());
-                builder.append(")");
+                builder.append(node.getColumns().stream()
+                        .map(SqlFormatter::formatName)
+                        .collect(joining(", ", "(", ")")));
             }
 
-            builder.append("VALUES (");
-            Joiner.on(", ").appendTo(builder, transform(node.getValues(), ExpressionFormatter::formatExpression));
-            builder.append(")");
+            builder.append("VALUES ");
+            builder.append(node.getValues().stream()
+                    .map(SqlFormatter::formatExpression)
+                    .collect(joining(", ", "(", ")")));
 
             return null;
         }
@@ -752,7 +1131,7 @@ public final class SqlFormatter
             for (MergeUpdate.Assignment assignment : node.getAssignments()) {
                 builder.append("\n");
                 append(indent + 1, first ? "  " : ", ");
-                builder.append(assignment.getTarget())
+                builder.append(formatName(assignment.getTarget()))
                         .append(" = ")
                         .append(formatExpression(assignment.getValue()));
                 first = false;
@@ -794,7 +1173,9 @@ public final class SqlFormatter
 
             node.getSecurity().ifPresent(security -> builder
                     .append(" SECURITY ")
-                    .append(security));
+                    .append(security.name()));
+
+            builder.append(formatPropertiesMultiLine(node.getProperties()));
 
             builder.append(" AS\n");
 
@@ -807,9 +1188,9 @@ public final class SqlFormatter
         protected Void visitRenameView(RenameView node, Integer indent)
         {
             builder.append("ALTER VIEW ")
-                    .append(node.getSource())
+                    .append(formatName(node.getSource()))
                     .append(" RENAME TO ")
-                    .append(node.getTarget());
+                    .append(formatName(node.getTarget()));
 
             return null;
         }
@@ -821,9 +1202,9 @@ public final class SqlFormatter
             if (node.isExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(node.getSource())
+            builder.append(formatName(node.getSource()))
                     .append(" RENAME TO ")
-                    .append(node.getTarget());
+                    .append(formatName(node.getTarget()));
 
             return null;
         }
@@ -853,6 +1234,8 @@ public final class SqlFormatter
             }
 
             builder.append(formatName(node.getName()));
+            node.getGracePeriod().ifPresent(interval ->
+                    builder.append("\nGRACE PERIOD ").append(formatExpression(interval)));
             node.getComment().ifPresent(comment -> builder
                     .append("\nCOMMENT ")
                     .append(formatStringLiteral(comment)));
@@ -891,7 +1274,7 @@ public final class SqlFormatter
             if (node.isExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(node.getName());
+            builder.append(formatName(node.getName()));
 
             return null;
         }
@@ -916,9 +1299,8 @@ public final class SqlFormatter
             }
 
             if (!options.isEmpty()) {
-                builder.append("(");
-                Joiner.on(", ").appendTo(builder, options);
-                builder.append(")");
+                builder.append(options.stream()
+                        .collect(joining(", ", "(", ")")));
             }
 
             builder.append("\n");
@@ -965,7 +1347,7 @@ public final class SqlFormatter
 
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" FROM ")
-                    .append(node.getCatalog().get()));
+                    .append(formatName(catalog)));
 
             node.getLikePattern().ifPresent(value -> builder
                     .append(" LIKE ")
@@ -1001,18 +1383,16 @@ public final class SqlFormatter
         @Override
         protected Void visitShowCreate(ShowCreate node, Integer indent)
         {
-            if (node.getType() == ShowCreate.Type.TABLE) {
-                builder.append("SHOW CREATE TABLE ")
-                        .append(formatName(node.getName()));
-            }
-            else if (node.getType() == ShowCreate.Type.VIEW) {
-                builder.append("SHOW CREATE VIEW ")
-                        .append(formatName(node.getName()));
-            }
-            else if (node.getType() == ShowCreate.Type.MATERIALIZED_VIEW) {
-                builder.append("SHOW CREATE MATERIALIZED VIEW ")
-                        .append(formatName(node.getName()));
-            }
+            builder.append("SHOW CREATE ")
+                    .append(switch (node.getType()) {
+                        case SCHEMA -> "SCHEMA";
+                        case TABLE -> "TABLE";
+                        case VIEW -> "VIEW";
+                        case MATERIALIZED_VIEW -> "MATERIALIZED VIEW";
+                        case FUNCTION -> "FUNCTION";
+                    })
+                    .append(" ")
+                    .append(formatName(node.getName()));
             return null;
         }
 
@@ -1047,11 +1427,15 @@ public final class SqlFormatter
         {
             builder.append("SHOW FUNCTIONS");
 
-            node.getLikePattern().ifPresent((value) -> builder
+            node.getSchema().ifPresent(value -> builder
+                    .append(" FROM ")
+                    .append(formatName(value)));
+
+            node.getLikePattern().ifPresent(value -> builder
                     .append(" LIKE ")
                     .append(formatStringLiteral(value)));
 
-            node.getEscape().ifPresent((value) -> builder
+            node.getEscape().ifPresent(value -> builder
                     .append(" ESCAPE ")
                     .append(formatStringLiteral(value)));
 
@@ -1083,6 +1467,40 @@ public final class SqlFormatter
             node.getWhere().ifPresent(where -> builder
                     .append(" WHERE ")
                     .append(formatExpression(where)));
+
+            return null;
+        }
+
+        @Override
+        protected Void visitCreateCatalog(CreateCatalog node, Integer indent)
+        {
+            builder.append("CREATE CATALOG ");
+            if (node.isNotExists()) {
+                builder.append("IF NOT EXISTS ");
+            }
+            builder.append(formatName(node.getCatalogName()));
+            builder.append(" USING ").append(formatName(node.getConnectorName()));
+            node.getComment().ifPresent(comment -> builder
+                    .append("\nCOMMENT ")
+                    .append(formatStringLiteral(comment)));
+            node.getPrincipal().ifPresent(principal -> builder
+                    .append("\nAUTHORIZATION ")
+                    .append(formatPrincipal(principal)));
+            builder.append(formatPropertiesMultiLine(node.getProperties()));
+
+            return null;
+        }
+
+        @Override
+        protected Void visitDropCatalog(DropCatalog node, Integer indent)
+        {
+            builder.append("DROP CATALOG ");
+            if (node.isExists()) {
+                builder.append("IF EXISTS ");
+            }
+            builder.append(formatName(node.getCatalogName()))
+                    .append(" ")
+                    .append(node.isCascade() ? "CASCADE" : "RESTRICT");
 
             return null;
         }
@@ -1123,7 +1541,7 @@ public final class SqlFormatter
             builder.append("ALTER SCHEMA ")
                     .append(formatName(node.getSource()))
                     .append(" RENAME TO ")
-                    .append(formatExpression(node.getTarget()));
+                    .append(formatName(node.getTarget()));
 
             return null;
         }
@@ -1142,17 +1560,20 @@ public final class SqlFormatter
         @Override
         protected Void visitCreateTableAsSelect(CreateTableAsSelect node, Integer indent)
         {
-            builder.append("CREATE TABLE ");
-            if (node.isNotExists()) {
+            builder.append("CREATE ");
+            if (node.getSaveMode() == REPLACE) {
+                builder.append("OR REPLACE ");
+            }
+            builder.append("TABLE ");
+            if (node.getSaveMode() == IGNORE) {
                 builder.append("IF NOT EXISTS ");
             }
             builder.append(formatName(node.getName()));
 
             node.getColumnAliases().ifPresent(columnAliases -> {
-                String columnList = columnAliases.stream()
-                        .map(ExpressionFormatter::formatExpression)
-                        .collect(joining(", "));
-                builder.append(format("( %s )", columnList));
+                builder.append(columnAliases.stream()
+                        .map(SqlFormatter::formatName)
+                        .collect(joining(", ", "( ", " )")));
             });
 
             node.getComment().ifPresent(comment -> builder
@@ -1173,8 +1594,12 @@ public final class SqlFormatter
         @Override
         protected Void visitCreateTable(CreateTable node, Integer indent)
         {
-            builder.append("CREATE TABLE ");
-            if (node.isNotExists()) {
+            builder.append("CREATE ");
+            if (node.getSaveMode() == REPLACE) {
+                builder.append("OR REPLACE ");
+            }
+            builder.append("TABLE ");
+            if (node.getSaveMode() == IGNORE) {
                 builder.append("IF NOT EXISTS ");
             }
             String tableName = formatName(node.getName());
@@ -1183,12 +1608,10 @@ public final class SqlFormatter
             String elementIndent = indentString(indent + 1);
             String columnList = node.getElements().stream()
                     .map(element -> {
-                        if (element instanceof ColumnDefinition) {
-                            ColumnDefinition column = (ColumnDefinition) element;
+                        if (element instanceof ColumnDefinition column) {
                             return elementIndent + formatColumnDefinition(column);
                         }
-                        if (element instanceof LikeClause) {
-                            LikeClause likeClause = (LikeClause) element;
+                        if (element instanceof LikeClause likeClause) {
                             StringBuilder builder = new StringBuilder(elementIndent);
                             builder.append("LIKE ")
                                     .append(formatName(likeClause.getTableName()));
@@ -1215,34 +1638,21 @@ public final class SqlFormatter
             return null;
         }
 
-        private String formatPropertiesMultiLine(List<Property> properties)
+        private static String formatPropertiesMultiLine(List<Property> properties)
         {
             if (properties.isEmpty()) {
                 return "";
             }
 
-            String propertyList = properties.stream()
-                    .map(element -> INDENT +
-                            formatExpression(element.getName()) + " = " +
-                            formatExpression(element.getValue()))
-                    .collect(joining(",\n"));
-
-            return "\nWITH (\n" + propertyList + "\n)";
+            return properties.stream()
+                    .map(property -> INDENT + formatProperty(property))
+                    .collect(joining(",\n", "\nWITH (\n", "\n)"));
         }
 
-        private String formatPropertiesSingleLine(List<Property> properties)
-        {
-            if (properties.isEmpty()) {
-                return "";
-            }
-
-            return " WITH ( " + joinProperties(properties) + " )";
-        }
-
-        private String formatColumnDefinition(ColumnDefinition column)
+        private static String formatColumnDefinition(ColumnDefinition column)
         {
             StringBuilder builder = new StringBuilder()
-                    .append(formatExpression(column.getName()))
+                    .append(formatName(column.getName()))
                     .append(" ").append(column.getType());
             if (!column.isNullable()) {
                 builder.append(" NOT NULL");
@@ -1250,34 +1660,30 @@ public final class SqlFormatter
             column.getComment().ifPresent(comment -> builder
                     .append(" COMMENT ")
                     .append(formatStringLiteral(comment)));
-            builder.append(formatPropertiesSingleLine(column.getProperties()));
+            if (!column.getProperties().isEmpty()) {
+                builder.append(" WITH (")
+                        .append(joinProperties(column.getProperties()))
+                        .append(")");
+            }
             return builder.toString();
         }
 
         private static String formatGrantor(GrantorSpecification grantor)
         {
-            GrantorSpecification.Type type = grantor.getType();
-            switch (type) {
-                case CURRENT_ROLE:
-                case CURRENT_USER:
-                    return type.name();
-                case PRINCIPAL:
-                    return formatPrincipal(grantor.getPrincipal().get());
-            }
-            throw new IllegalArgumentException("Unsupported principal type: " + type);
+            GrantorSpecification.Type type = grantor.type();
+            return switch (type) {
+                case CURRENT_ROLE, CURRENT_USER -> type.name();
+                case PRINCIPAL -> formatPrincipal(grantor.principal().get());
+            };
         }
 
         private static String formatPrincipal(PrincipalSpecification principal)
         {
-            PrincipalSpecification.Type type = principal.getType();
-            switch (type) {
-                case UNSPECIFIED:
-                    return principal.getName().toString();
-                case USER:
-                case ROLE:
-                    return format("%s %s", type.name(), principal.getName());
-            }
-            throw new IllegalArgumentException("Unsupported principal type: " + type);
+            PrincipalSpecification.Type type = principal.type();
+            return switch (type) {
+                case UNSPECIFIED -> principal.name().toString();
+                case USER, ROLE -> type.name() + " " + principal.name();
+            };
         }
 
         @Override
@@ -1299,9 +1705,9 @@ public final class SqlFormatter
             if (node.isExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(node.getSource())
+            builder.append(formatName(node.getSource()))
                     .append(" RENAME TO ")
-                    .append(node.getTarget());
+                    .append(formatName(node.getTarget()));
 
             return null;
         }
@@ -1309,20 +1715,31 @@ public final class SqlFormatter
         @Override
         protected Void visitSetProperties(SetProperties node, Integer context)
         {
-            builder.append("ALTER TABLE ");
-            builder.append(node.getName())
-                    .append(" SET PROPERTIES ");
-            builder.append(joinProperties(node.getProperties()));
+            SetProperties.Type type = node.getType();
+            builder.append("ALTER ");
+            builder.append(switch (type) {
+                case TABLE -> "TABLE ";
+                case MATERIALIZED_VIEW -> "MATERIALIZED VIEW ";
+            });
+
+            builder.append(formatName(node.getName()))
+                    .append(" SET PROPERTIES ")
+                    .append(joinProperties(node.getProperties()));
 
             return null;
         }
 
-        private String joinProperties(List<Property> properties)
+        private static String joinProperties(List<Property> properties)
         {
             return properties.stream()
-                    .map(element -> formatExpression(element.getName()) + " = " +
-                            formatExpression(element.getValue()))
+                    .map(Formatter::formatProperty)
                     .collect(joining(", "));
+        }
+
+        private static String formatProperty(Property property)
+        {
+            return formatName(property.getName()) + " = " +
+                    (property.isSetToDefault() ? "DEFAULT" : formatExpression(property.getNonDefaultValue()));
         }
 
         @Override
@@ -1332,20 +1749,13 @@ public final class SqlFormatter
                     .map(ExpressionFormatter::formatStringLiteral)
                     .orElse("NULL");
 
-            switch (node.getType()) {
-                case TABLE:
-                    builder.append("COMMENT ON TABLE ")
-                            .append(node.getName())
-                            .append(" IS ")
-                            .append(comment);
-                    break;
-                case COLUMN:
-                    builder.append("COMMENT ON COLUMN ")
-                            .append(node.getName())
-                            .append(" IS ")
-                            .append(comment);
-                    break;
-            }
+            String type = switch (node.getType()) {
+                case TABLE -> "TABLE";
+                case VIEW -> "VIEW";
+                case COLUMN -> "COLUMN";
+            };
+
+            builder.append("COMMENT ON " + type + " " + formatName(node.getName()) + " IS " + comment);
 
             return null;
         }
@@ -1357,14 +1767,14 @@ public final class SqlFormatter
             if (node.isTableExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(node.getTable())
+            builder.append(formatName(node.getTable()))
                     .append(" RENAME COLUMN ");
             if (node.isColumnExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(node.getSource())
+            builder.append(formatName(node.getSource()))
                     .append(" TO ")
-                    .append(node.getTarget());
+                    .append(formatName(node.getTarget()));
 
             return null;
         }
@@ -1381,7 +1791,7 @@ public final class SqlFormatter
             if (node.isColumnExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(formatExpression(node.getColumn()));
+            builder.append(formatName(node.getField()));
 
             return null;
         }
@@ -1392,7 +1802,7 @@ public final class SqlFormatter
             builder.append("ALTER TABLE ");
             builder.append(formatName(node.getTable().getName()));
             builder.append(" EXECUTE ");
-            builder.append(formatExpression(node.getProcedureName()));
+            builder.append(formatName(node.getProcedureName()));
             if (!node.getArguments().isEmpty()) {
                 builder.append("(");
                 formatCallArguments(indent, node.getArguments());
@@ -1422,12 +1832,51 @@ public final class SqlFormatter
             if (node.isTableExists()) {
                 builder.append("IF EXISTS ");
             }
-            builder.append(node.getName())
+            builder.append(formatName(node.getName()))
                     .append(" ADD COLUMN ");
             if (node.isColumnNotExists()) {
                 builder.append("IF NOT EXISTS ");
             }
             builder.append(formatColumnDefinition(node.getColumn()));
+
+            node.getPosition().ifPresent(position -> {
+                switch (position) {
+                    case ColumnPosition.First _ -> builder.append(" FIRST");
+                    case ColumnPosition.After after -> builder.append(" AFTER ").append(formatName(after.column()));
+                    case ColumnPosition.Last _ -> builder.append(" LAST");
+                }
+            });
+
+            return null;
+        }
+
+        @Override
+        protected Void visitSetColumnType(SetColumnType node, Integer context)
+        {
+            builder.append("ALTER TABLE ");
+            if (node.isTableExists()) {
+                builder.append("IF EXISTS ");
+            }
+            builder.append(formatName(node.getTableName()))
+                    .append(" ALTER COLUMN ")
+                    .append(formatName(node.getColumnName()))
+                    .append(" SET DATA TYPE ")
+                    .append(node.getType().toString());
+
+            return null;
+        }
+
+        @Override
+        protected Void visitDropNotNullConstraint(DropNotNullConstraint node, Integer context)
+        {
+            builder.append("ALTER TABLE ");
+            if (node.isTableExists()) {
+                builder.append("IF EXISTS ");
+            }
+            builder.append(formatName(node.getTable()))
+                    .append(" ALTER COLUMN ")
+                    .append(formatName(node.getColumn()))
+                    .append(" DROP NOT NULL");
 
             return null;
         }
@@ -1450,9 +1899,9 @@ public final class SqlFormatter
                     .append(formatName(node.getTarget()));
 
             node.getColumns().ifPresent(columns -> builder
-                        .append(" (")
-                        .append(Joiner.on(", ").join(columns))
-                        .append(")"));
+                    .append(" (")
+                    .append(Joiner.on(", ").join(columns))
+                    .append(")"));
 
             builder.append("\n");
 
@@ -1465,7 +1914,7 @@ public final class SqlFormatter
         protected Void visitUpdate(Update node, Integer indent)
         {
             builder.append("UPDATE ")
-                    .append(node.getTable().getName())
+                    .append(formatName(node.getTable().getName()))
                     .append(" SET");
             int setCounter = node.getAssignments().size() - 1;
             for (UpdateAssignment assignment : node.getAssignments()) {
@@ -1499,7 +1948,7 @@ public final class SqlFormatter
         public Void visitSetSession(SetSession node, Integer indent)
         {
             builder.append("SET SESSION ")
-                    .append(node.getName())
+                    .append(formatName(node.getName()))
                     .append(" = ")
                     .append(formatExpression(node.getValue()));
 
@@ -1510,8 +1959,23 @@ public final class SqlFormatter
         public Void visitResetSession(ResetSession node, Integer indent)
         {
             builder.append("RESET SESSION ")
-                    .append(node.getName());
+                    .append(formatName(node.getName()));
 
+            return null;
+        }
+
+        @Override
+        protected Void visitSetSessionAuthorization(SetSessionAuthorization node, Integer context)
+        {
+            builder.append("SET SESSION AUTHORIZATION ");
+            builder.append(formatExpression(node.getUser()));
+            return null;
+        }
+
+        @Override
+        protected Void visitResetSessionAuthorization(ResetSessionAuthorization node, Integer context)
+        {
+            builder.append("RESET SESSION AUTHORIZATION");
             return null;
         }
 
@@ -1519,7 +1983,7 @@ public final class SqlFormatter
         protected Void visitCallArgument(CallArgument node, Integer indent)
         {
             node.getName().ifPresent(name -> builder
-                    .append(name)
+                    .append(formatName(name))
                     .append(" => "));
             builder.append(formatExpression(node.getValue()));
 
@@ -1530,7 +1994,7 @@ public final class SqlFormatter
         protected Void visitCall(Call node, Integer indent)
         {
             builder.append("CALL ")
-                    .append(node.getName())
+                    .append(formatName(node.getName()))
                     .append("(");
             formatCallArguments(indent, node.getArguments());
             builder.append(")");
@@ -1612,23 +2076,27 @@ public final class SqlFormatter
         @Override
         protected Void visitCreateRole(CreateRole node, Integer indent)
         {
-            builder.append("CREATE ROLE ").append(node.getName());
+            builder.append("CREATE ROLE ").append(formatName(node.getName()));
             node.getGrantor().ifPresent(grantor -> builder
                     .append(" WITH ADMIN ")
                     .append(formatGrantor(grantor)));
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" IN ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
             return null;
         }
 
         @Override
         protected Void visitDropRole(DropRole node, Integer indent)
         {
-            builder.append("DROP ROLE ").append(node.getName());
+            builder.append("DROP ROLE ");
+            if (node.isExists()) {
+                builder.append("IF EXISTS ");
+            }
+            builder.append(formatName(node.getName()));
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" IN ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
             return null;
         }
 
@@ -1651,7 +2119,7 @@ public final class SqlFormatter
                     .append(formatGrantor(grantor)));
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" IN ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
             return null;
         }
 
@@ -1674,7 +2142,7 @@ public final class SqlFormatter
                     .append(formatGrantor(grantor)));
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" IN ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
             return null;
         }
 
@@ -1683,20 +2151,13 @@ public final class SqlFormatter
         {
             builder.append("SET ROLE ");
             SetRole.Type type = node.getType();
-            switch (type) {
-                case ALL:
-                case NONE:
-                    builder.append(type);
-                    break;
-                case ROLE:
-                    builder.append(node.getRole().get());
-                    break;
-                default:
-                    throw new IllegalArgumentException("Unsupported type: " + type);
-            }
+            builder.append(switch (type) {
+                case ALL, NONE -> type.name();
+                case ROLE -> formatName(node.getRole().get());
+            });
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" IN ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
             return null;
         }
 
@@ -1705,20 +2166,41 @@ public final class SqlFormatter
         {
             builder.append("GRANT ");
 
-            builder.append(node.getPrivileges()
-                    .map(privileges -> String.join(", ", privileges))
-                    .orElse("ALL PRIVILEGES"));
-
-            builder.append(" ON ");
-            node.getType().ifPresent(type -> builder
-                    .append(type)
-                    .append(' '));
-            builder.append(formatName(node.getName()))
+            if (node.getPrivileges().isEmpty()) {
+                builder.append("ALL PRIVILEGES");
+            }
+            else {
+                builder.append(node.getPrivileges()
+                        .map(privileges -> join(", ", privileges))
+                        .orElseThrow());
+            }
+            builder.append(" ON ")
+                    .append(formatGrantScope(node.getGrantObject()))
                     .append(" TO ")
                     .append(formatPrincipal(node.getGrantee()));
             if (node.isWithGrantOption()) {
                 builder.append(" WITH GRANT OPTION");
             }
+
+            return null;
+        }
+
+        @Override
+        public Void visitDeny(Deny node, Integer indent)
+        {
+            builder.append("DENY ");
+
+            if (node.getPrivileges().isPresent()) {
+                builder.append(join(", ", node.getPrivileges().get()));
+            }
+            else {
+                builder.append("ALL PRIVILEGES");
+            }
+
+            builder.append(" ON ")
+                    .append(formatGrantScope(node.getGrantObject()))
+                    .append(" TO ")
+                    .append(formatPrincipal(node.getGrantee()));
 
             return null;
         }
@@ -1732,15 +2214,17 @@ public final class SqlFormatter
                 builder.append("GRANT OPTION FOR ");
             }
 
-            builder.append(node.getPrivileges()
-                    .map(privileges -> String.join(", ", privileges))
-                    .orElse("ALL PRIVILEGES"));
+            if (node.getPrivileges().isEmpty()) {
+                builder.append("ALL PRIVILEGES");
+            }
+            else {
+                builder.append(node.getPrivileges()
+                        .map(privileges -> join(", ", privileges))
+                        .orElseThrow());
+            }
 
-            builder.append(" ON ");
-            node.getType().ifPresent(type -> builder
-                    .append(type)
-                    .append(' '));
-            builder.append(node.getName())
+            builder.append(" ON ")
+                    .append(formatGrantScope(node.getGrantObject()))
                     .append(" FROM ")
                     .append(formatPrincipal(node.getGrantee()));
 
@@ -1752,13 +2236,8 @@ public final class SqlFormatter
         {
             builder.append("SHOW GRANTS ");
 
-            node.getTableName().ifPresent(tableName -> {
-                builder.append("ON ");
-                if (node.getTable()) {
-                    builder.append("TABLE ");
-                }
-                builder.append(tableName);
-            });
+            node.getGrantObject().ifPresent(scope -> builder.append("ON ")
+                    .append(formatGrantScope(scope)));
 
             return null;
         }
@@ -1773,7 +2252,7 @@ public final class SqlFormatter
             builder.append("ROLES");
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" FROM ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
 
             return null;
         }
@@ -1784,7 +2263,7 @@ public final class SqlFormatter
             builder.append("SHOW ROLE GRANTS");
             node.getCatalog().ifPresent(catalog -> builder
                     .append(" FROM ")
-                    .append(catalog));
+                    .append(formatName(catalog)));
             return null;
         }
 
@@ -1800,8 +2279,330 @@ public final class SqlFormatter
         public Void visitSetTimeZone(SetTimeZone node, Integer indent)
         {
             builder.append("SET TIME ZONE ");
-            builder.append(node.getTimeZone().map(ExpressionFormatter::formatExpression).orElse("LOCAL"));
+            builder.append(node.getTimeZone().map(SqlFormatter::formatExpression).orElse("LOCAL"));
             return null;
+        }
+
+        @Override
+        protected Void visitCreateFunction(CreateFunction node, Integer indent)
+        {
+            builder.append("CREATE ");
+            if (node.isReplace()) {
+                builder.append("OR REPLACE ");
+            }
+            process(node.getSpecification(), indent);
+            return null;
+        }
+
+        @Override
+        protected Void visitDropFunction(DropFunction node, Integer indent)
+        {
+            builder.append("DROP FUNCTION ");
+            if (node.isExists()) {
+                builder.append("IF EXISTS ");
+            }
+            builder.append(formatName(node.getName()));
+            processParameters(node.getParameters(), indent);
+            return null;
+        }
+
+        @Override
+        protected Void visitFunctionSpecification(FunctionSpecification node, Integer indent)
+        {
+            append(indent, "FUNCTION ")
+                    .append(formatName(node.getName()));
+            processParameters(node.getParameters(), indent);
+            builder.append("\n");
+            process(node.getReturnsClause(), indent);
+            builder.append("\n");
+            for (RoutineCharacteristic characteristic : node.getRoutineCharacteristics()) {
+                process(characteristic, indent);
+                builder.append("\n");
+            }
+            node.getStatement().ifPresent(statement -> process(statement, indent));
+            node.getDefinition().map(StringLiteral::getValue).ifPresent(definition -> {
+                append(indent, "AS ");
+                builder.append("$$\n").append(definition).append("$$");
+            });
+            return null;
+        }
+
+        @Override
+        protected Void visitSessionProperty(SessionProperty node, Integer indent)
+        {
+            append(indent, formatName(node.getName()))
+                .append(" = ")
+                    .append(formatExpression(node.getValue()));
+            return null;
+        }
+
+        @Override
+        protected Void visitParameterDeclaration(ParameterDeclaration node, Integer indent)
+        {
+            node.getName().ifPresent(value ->
+                    builder.append(formatName(value)).append(" "));
+            builder.append(formatExpression(node.getType()));
+            return null;
+        }
+
+        @Override
+        protected Void visitLanguageCharacteristic(LanguageCharacteristic node, Integer indent)
+        {
+            append(indent, "LANGUAGE ")
+                    .append(formatName(node.getLanguage()));
+            return null;
+        }
+
+        @Override
+        protected Void visitDeterministicCharacteristic(DeterministicCharacteristic node, Integer indent)
+        {
+            append(indent, (node.isDeterministic() ? "" : "NOT ") + "DETERMINISTIC");
+            return null;
+        }
+
+        @Override
+        protected Void visitNullInputCharacteristic(NullInputCharacteristic node, Integer indent)
+        {
+            if (node.isCalledOnNull()) {
+                append(indent, "CALLED ON NULL INPUT");
+            }
+            else {
+                append(indent, "RETURNS NULL ON NULL INPUT");
+            }
+            return null;
+        }
+
+        @Override
+        protected Void visitSecurityCharacteristic(SecurityCharacteristic node, Integer indent)
+        {
+            append(indent, "SECURITY ")
+                    .append(node.getSecurity().name());
+            return null;
+        }
+
+        @Override
+        protected Void visitCommentCharacteristic(CommentCharacteristic node, Integer indent)
+        {
+            append(indent, "COMMENT ")
+                    .append(formatStringLiteral(node.getComment()));
+            return null;
+        }
+
+        @Override
+        protected Void visitPropertiesCharacteristic(PropertiesCharacteristic node, Integer indent)
+        {
+            append(indent, "WITH (\n");
+            Iterator<Property> iterator = node.getProperties().iterator();
+            while (iterator.hasNext()) {
+                Property property = iterator.next();
+                append(indent + 1, formatProperty(property));
+                builder.append(iterator.hasNext() ? ",\n" : "\n");
+            }
+            append(indent, ")");
+            return null;
+        }
+
+        @Override
+        protected Void visitReturnClause(ReturnsClause node, Integer indent)
+        {
+            append(indent, "RETURNS ")
+                    .append(formatExpression(node.getReturnType()));
+            return null;
+        }
+
+        @Override
+        protected Void visitReturnStatement(ReturnStatement node, Integer indent)
+        {
+            append(indent, "RETURN ")
+                    .append(formatExpression(node.getValue()));
+            return null;
+        }
+
+        @Override
+        protected Void visitCompoundStatement(CompoundStatement node, Integer indent)
+        {
+            append(indent, "BEGIN\n");
+            for (VariableDeclaration variableDeclaration : node.getVariableDeclarations()) {
+                process(variableDeclaration, indent + 1);
+                builder.append(";\n");
+            }
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            append(indent, "END");
+            return null;
+        }
+
+        @Override
+        protected Void visitVariableDeclaration(VariableDeclaration node, Integer indent)
+        {
+            append(indent, "DECLARE ")
+                    .append(node.getNames().stream()
+                            .map(SqlFormatter::formatName)
+                            .collect(joining(", ")))
+                    .append(" ")
+                    .append(formatExpression(node.getType()));
+            if (node.getDefaultValue().isPresent()) {
+                builder.append(" DEFAULT ")
+                        .append(formatExpression(node.getDefaultValue().get()));
+            }
+            return null;
+        }
+
+        @Override
+        protected Void visitAssignmentStatement(AssignmentStatement node, Integer indent)
+        {
+            append(indent, "SET ");
+            builder.append(formatName(node.getTarget()))
+                    .append(" = ")
+                    .append(formatExpression(node.getValue()));
+            return null;
+        }
+
+        @Override
+        protected Void visitCaseStatement(CaseStatement node, Integer indent)
+        {
+            append(indent, "CASE");
+            if (node.getExpression().isPresent()) {
+                builder.append(" ")
+                        .append(formatExpression(node.getExpression().get()));
+            }
+            builder.append("\n");
+            for (CaseStatementWhenClause whenClause : node.getWhenClauses()) {
+                process(whenClause, indent + 1);
+            }
+            if (node.getElseClause().isPresent()) {
+                process(node.getElseClause().get(), indent + 1);
+            }
+            append(indent, "END CASE");
+            return null;
+        }
+
+        @Override
+        protected Void visitCaseStatementWhenClause(CaseStatementWhenClause node, Integer indent)
+        {
+            append(indent, "WHEN ")
+                    .append(formatExpression(node.getExpression()))
+                    .append(" THEN\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            return null;
+        }
+
+        @Override
+        protected Void visitIfStatement(IfStatement node, Integer indent)
+        {
+            append(indent, "IF ")
+                    .append(formatExpression(node.getExpression()))
+                    .append(" THEN\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            for (ElseIfClause elseIfClause : node.getElseIfClauses()) {
+                process(elseIfClause, indent);
+            }
+            if (node.getElseClause().isPresent()) {
+                process(node.getElseClause().get(), indent);
+            }
+            append(indent, "END IF");
+            return null;
+        }
+
+        @Override
+        protected Void visitElseIfClause(ElseIfClause node, Integer indent)
+        {
+            append(indent, "ELSEIF ")
+                    .append(formatExpression(node.getExpression()))
+                    .append(" THEN\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            return null;
+        }
+
+        @Override
+        protected Void visitElseClause(ElseClause node, Integer indent)
+        {
+            append(indent, "ELSE\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            return null;
+        }
+
+        @Override
+        protected Void visitIterateStatement(IterateStatement node, Integer indent)
+        {
+            append(indent, "ITERATE ")
+                    .append(formatName(node.getLabel()));
+            return null;
+        }
+
+        @Override
+        protected Void visitLeaveStatement(LeaveStatement node, Integer indent)
+        {
+            append(indent, "LEAVE ")
+                    .append(formatName(node.getLabel()));
+            return null;
+        }
+
+        @Override
+        protected Void visitLoopStatement(LoopStatement node, Integer indent)
+        {
+            builder.append(indentString(indent));
+            appendBeginLabel(node.getLabel());
+            builder.append("LOOP\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            append(indent, "END LOOP");
+            return null;
+        }
+
+        @Override
+        protected Void visitWhileStatement(WhileStatement node, Integer indent)
+        {
+            builder.append(indentString(indent));
+            appendBeginLabel(node.getLabel());
+            builder.append("WHILE ")
+                    .append(formatExpression(node.getExpression()))
+                    .append(" DO\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            append(indent, "END WHILE");
+            return null;
+        }
+
+        @Override
+        protected Void visitRepeatStatement(RepeatStatement node, Integer indent)
+        {
+            builder.append(indentString(indent));
+            appendBeginLabel(node.getLabel());
+            builder.append("REPEAT\n");
+            for (ControlStatement statement : node.getStatements()) {
+                process(statement, indent + 1);
+                builder.append(";\n");
+            }
+            append(indent, "UNTIL ")
+                    .append(formatExpression(node.getCondition()))
+                    .append("\n");
+            append(indent, "END REPEAT");
+            return null;
+        }
+
+        private void appendBeginLabel(Optional<Identifier> label)
+        {
+            label.ifPresent(value ->
+                    builder.append(formatName(value)).append(": "));
         }
 
         private void processRelation(Relation relation, Integer indent)
@@ -1809,7 +2610,7 @@ public final class SqlFormatter
             // TODO: handle this properly
             if (relation instanceof Table) {
                 builder.append("TABLE ")
-                        .append(((Table) relation).getName())
+                        .append(formatName(((Table) relation).getName()))
                         .append('\n');
             }
             else {
@@ -1817,7 +2618,20 @@ public final class SqlFormatter
             }
         }
 
-        private StringBuilder append(int indent, String value)
+        private void processParameters(List<ParameterDeclaration> parameters, Integer indent)
+        {
+            builder.append("(");
+            Iterator<ParameterDeclaration> iterator = parameters.iterator();
+            while (iterator.hasNext()) {
+                process(iterator.next(), indent);
+                if (iterator.hasNext()) {
+                    builder.append(", ");
+                }
+            }
+            builder.append(")");
+        }
+
+        private SqlBuilder append(int indent, String value)
         {
             return builder.append(indentString(indent))
                     .append(value);
@@ -1825,7 +2639,7 @@ public final class SqlFormatter
 
         private static String indentString(int indent)
         {
-            return Strings.repeat(INDENT, indent);
+            return INDENT.repeat(indent);
         }
 
         private void formatDefinitionList(List<String> elements, int indent)
@@ -1841,22 +2655,29 @@ public final class SqlFormatter
                     append(indent, elements.get(i))
                             .append(",\n");
                 }
-                append(indent, elements.get(elements.size() - 1))
+                append(indent, elements.getLast())
                         .append("\n");
             }
         }
     }
 
-    private static void appendAliasColumns(StringBuilder builder, List<Identifier> columns)
+    private static void appendAliasColumns(Formatter.SqlBuilder builder, List<Identifier> columns)
     {
-        if ((columns != null) && (!columns.isEmpty())) {
+        if ((columns != null) && !columns.isEmpty()) {
             String formattedColumns = columns.stream()
-                    .map(ExpressionFormatter::formatExpression)
-                    .collect(Collectors.joining(", "));
+                    .map(SqlFormatter::formatName)
+                    .collect(joining(", "));
 
             builder.append(" (")
                     .append(formattedColumns)
                     .append(')');
         }
+    }
+
+    private static String formatGrantScope(GrantObject grantObject)
+    {
+        return String.format("%s%s",
+                grantObject.getEntityKind().isPresent() ? grantObject.getEntityKind().get() + " " : "",
+                formatName(grantObject.getName()));
     }
 }
