@@ -14,6 +14,8 @@
 package io.trino.plugin.phoenix5;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
+import com.google.inject.Inject;
 import io.airlift.log.Logger;
 import io.trino.plugin.jdbc.JdbcColumnHandle;
 import io.trino.plugin.jdbc.JdbcTableHandle;
@@ -25,6 +27,7 @@ import io.trino.spi.connector.ConnectorSplitManager;
 import io.trino.spi.connector.ConnectorSplitSource;
 import io.trino.spi.connector.ConnectorTableHandle;
 import io.trino.spi.connector.ConnectorTransactionHandle;
+import io.trino.spi.connector.Constraint;
 import io.trino.spi.connector.DynamicFilter;
 import io.trino.spi.connector.FixedSplitSource;
 import org.apache.hadoop.hbase.HRegionLocation;
@@ -38,8 +41,6 @@ import org.apache.phoenix.jdbc.PhoenixPreparedStatement;
 import org.apache.phoenix.mapreduce.PhoenixInputSplit;
 import org.apache.phoenix.query.KeyRange;
 
-import javax.inject.Inject;
-
 import java.io.IOException;
 import java.sql.Connection;
 import java.sql.SQLException;
@@ -48,11 +49,12 @@ import java.util.List;
 import java.util.Optional;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
+import static io.trino.plugin.jdbc.JdbcMetadata.getColumns;
 import static io.trino.plugin.phoenix5.PhoenixErrorCode.PHOENIX_INTERNAL_ERROR;
 import static io.trino.plugin.phoenix5.PhoenixErrorCode.PHOENIX_SPLIT_ERROR;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.toList;
-import static org.apache.phoenix.coprocessor.BaseScannerRegionObserver.EXPECTED_UPPER_REGION_KEY;
+import static org.apache.phoenix.coprocessorclient.BaseScannerRegionObserverConstants.EXPECTED_UPPER_REGION_KEY;
 
 public class PhoenixSplitManager
         implements ConnectorSplitManager
@@ -72,26 +74,28 @@ public class PhoenixSplitManager
             ConnectorTransactionHandle transaction,
             ConnectorSession session,
             ConnectorTableHandle table,
-            SplitSchedulingStrategy splitSchedulingStrategy,
-            DynamicFilter dynamicFilter)
+            DynamicFilter dynamicFilter,
+            Constraint constraint)
     {
         JdbcTableHandle tableHandle = (JdbcTableHandle) table;
         try (Connection connection = phoenixClient.getConnection(session)) {
             List<JdbcColumnHandle> columns = tableHandle.getColumns()
                     .map(columnSet -> columnSet.stream().map(JdbcColumnHandle.class::cast).collect(toList()))
-                    .orElseGet(() -> phoenixClient.getColumns(session, tableHandle));
-            PhoenixPreparedStatement inputQuery = (PhoenixPreparedStatement) phoenixClient.prepareStatement(
+                    .orElseGet(() -> getColumns(session, phoenixClient, tableHandle));
+            PhoenixPreparedStatement inputQuery = phoenixClient.prepareStatement(
                     session,
                     connection,
                     tableHandle,
                     columns,
-                    Optional.empty());
+                    Optional.empty())
+                    .unwrap(PhoenixPreparedStatement.class);
 
-            List<ConnectorSplit> splits = getSplits(inputQuery).stream()
+            int maxScansPerSplit = session.getProperty(PhoenixSessionProperties.MAX_SCANS_PER_SPLIT, Integer.class);
+            List<ConnectorSplit> splits = getSplits(inputQuery, maxScansPerSplit).stream()
                     .map(PhoenixInputSplit.class::cast)
                     .map(split -> new PhoenixSplit(
                             getSplitAddresses(split),
-                            new WrappedPhoenixInputSplit(split)))
+                            SerializedPhoenixInputSplit.serialize(split)))
                     .collect(toImmutableList());
             return new FixedSplitSource(splits);
         }
@@ -113,15 +117,15 @@ public class PhoenixSplitManager
         }
     }
 
-    private List<InputSplit> getSplits(PhoenixPreparedStatement inputQuery)
+    private List<InputSplit> getSplits(PhoenixPreparedStatement inputQuery, int maxScansPerSplit)
             throws IOException
     {
         QueryPlan queryPlan = phoenixClient.getQueryPlan(inputQuery);
-        return generateSplits(queryPlan, queryPlan.getSplits());
+        return generateSplits(queryPlan, queryPlan.getSplits(), maxScansPerSplit);
     }
 
     // mostly copied from PhoenixInputFormat, but without the region size calculations
-    private List<InputSplit> generateSplits(QueryPlan queryPlan, List<KeyRange> splits)
+    private List<InputSplit> generateSplits(QueryPlan queryPlan, List<KeyRange> splits, int maxScansPerSplit)
             throws IOException
     {
         requireNonNull(queryPlan, "queryPlan is null");
@@ -132,22 +136,29 @@ public class PhoenixSplitManager
             long regionSize = -1;
             List<InputSplit> inputSplits = new ArrayList<>(splits.size());
             for (List<Scan> scans : queryPlan.getScans()) {
-                HRegionLocation location = regionLocator.getRegionLocation(scans.get(0).getStartRow(), false);
+                HRegionLocation location = regionLocator.getRegionLocation(scans.getFirst().getStartRow(), false);
                 String regionLocation = location.getHostname();
 
                 if (log.isDebugEnabled()) {
                     log.debug(
                             "Scan count[%d] : %s ~ %s",
                             scans.size(),
-                            Bytes.toStringBinary(scans.get(0).getStartRow()),
-                            Bytes.toStringBinary(scans.get(scans.size() - 1).getStopRow()));
+                            Bytes.toStringBinary(scans.getFirst().getStartRow()),
+                            Bytes.toStringBinary(scans.getLast().getStopRow()));
                     log.debug("First scan : %swith scanAttribute : %s [scanCache, cacheBlock, scanBatch] : [%d, %s, %d] and  regionLocation : %s",
-                            scans.get(0), scans.get(0).getAttributesMap(), scans.get(0).getCaching(), scans.get(0).getCacheBlocks(), scans.get(0).getBatch(), regionLocation);
+                            scans.getFirst(), scans.getFirst().getAttributesMap(), scans.getFirst().getCaching(), scans.getFirst().getCacheBlocks(), scans.getFirst().getBatch(), regionLocation);
                     for (int i = 0, limit = scans.size(); i < limit; i++) {
                         log.debug("EXPECTED_UPPER_REGION_KEY[%d] : %s", i, Bytes.toStringBinary(scans.get(i).getAttribute(EXPECTED_UPPER_REGION_KEY)));
                     }
                 }
-                inputSplits.add(new PhoenixInputSplit(scans, regionSize, regionLocation));
+                /*
+                 * Handle parallel execution explicitly in Trino rather than internally in Phoenix.
+                 * Each split is handled by a single ConcatResultIterator
+                 * (See PhoenixClient.getResultSet(...))
+                 */
+                for (List<Scan> splitScans : Lists.partition(scans, maxScansPerSplit)) {
+                    inputSplits.add(new PhoenixInputSplit(splitScans, regionSize, regionLocation));
+                }
             }
             return inputSplits;
         }
